# panda3d-simpleecs

./: .pylintrc  .travis.yml  MANIFEST.in  README.md  benchmark.py  setup.cfg  setup.py
simpleecs/: components.py  core.py  systems.py
tests/: test_simpleecs.py
