[metadata]
name = panda3d-simpleecs
author = Mitchell Stokes
home-page = https://github.com/Moguri/panda3d-simpleecs
description = A simple Python entity component system for Panda3D
long-description = file: README.md
long-description-content-type = text/markdown
license = MIT
license-file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
include-package-data = true
python-requires = >=3.7

[global]
verbose = 0

[aliases]
test = pytest

[tool:pytest]
addopts = --pylint
